Fixed social links spacing

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -276,7 +276,7 @@
   margin: 0 auto;
   li {
     float: left;
-    margin: 0 0px;
+    margin: 0 5px;
     &:first-of-type { margin-left: 0 }
     &:last-of-type { margin-right: 0 }
     a {
